Added instagram and removed twitter with links

--- a/Pages/team.html
+++ b/Pages/team.html
@@ -86,7 +86,7 @@
                 <a href="https://www.linkedin.com/in/srishti-majumder-6560bb200/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href="https://github.com/Srishtihere"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/its_.me_.srishti/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
                 <a href="https://www.linkedin.com/in/rajarshi-roy-ceo/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href="https://github.com/roy-rajarshi"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/_roystark_/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
                 <a href="https://www.linkedin.com/in/shreya-roy-3147881b7/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/i_am_shreya_roy/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
                 <a href="https://www.linkedin.com/in/debajyoti-sarkar-oos/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href="https://github.com/debajyotisarkarhome"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/debajyotisarkar_oos/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -138,7 +138,7 @@
                 <a href="https://www.linkedin.com/in/soumwadeep-guha-5b60031bb/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href="https://github.com/soumwadeep"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/soumwadeep/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -151,7 +151,7 @@
                 <a href="https://www.linkedin.com/in/sabarna-biswas-a9a718194/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href="https://github.com/Sabarna07"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/sabarnabiswas/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -164,7 +164,7 @@
                 <a href="https://www.linkedin.com/in/gourab-deb-b77843142/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/gourabdeb_1619/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -178,7 +178,7 @@
 "><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/subhranilsarkar/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -191,7 +191,7 @@
                 <a href="https://www.linkedin.com/in/swarup-das-8bb857200/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href=""><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -204,7 +204,7 @@
                 <a href="https://www.linkedin.com/in/parna-das-47b886202/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/parnadas10/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -217,7 +217,7 @@
                 <a href="https://www.linkedin.com/in/rajasree-baruri-b07a461ba/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href=""><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -230,7 +230,7 @@
                 <a href="https://www.linkedin.com/in/trinankur-atarthi-862541200/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
-                <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
+                <a href="https://www.instagram.com/i_am_trinankur/"><img class="socials-style" src="../Icons/instagram.svg" alt=""></a>
             </div>
         </div>
     </div>
