Make The Title Size Of Card Smaller

--- a/Pages/events.html
+++ b/Pages/events.html
@@ -63,7 +63,7 @@
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Events
           </h1>
-          <h2 style="color: white; margin-top: 0 !important;">Check out our cool events</h2>
+          <h2 style="color: white; margin-top: 0 !important;">Check out our cool events</h3>
           
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
@@ -79,7 +79,7 @@
     <div class="container-ev left-ev">
         <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-android-study-jam-session-3/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-                <h2>Android Study Jam - Session 3</h2>
+                <h3 style="color: black;">Android Study Jam - Session 3</h3>
                 <br>
                 <p>Dec 29, 2021</p><br>
                 <p>Speaker:Trinankur Atarthi</p><br>
@@ -91,7 +91,7 @@
     <div class="container-ev right-ev">
         <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-android-study-jams-session-2/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-              <h2>Android Study Jam - Session 2</h2>
+              <h3 style="color: black;">Android Study Jam - Session 2</h3>
               <br>
               <p>Dec 29, 2021</p><br>
               <p>Speaker:Pankaj Rai</p><br>
@@ -103,7 +103,7 @@
     <div class="container-ev left-ev">
         <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-women-in-tech-the-beginning/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-                <h2>Wo(Men) In Tech: The beginning</h2>
+                <h3 style="color: black;">Wo(Men) In Tech: The beginning</h3>
                 <br>
                 <p>Dec 9 - 10, 2021</p><br>
                 <p>This Program is Initiated and Organised by 17 GDSCs across the different States of India. </p>
@@ -116,7 +116,7 @@
     <div class="container-ev right-ev">
         <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-all-about-android-study-jam/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-                <h2>Android Study Jams</h2>
+                <h3 style="color: black;">Android Study Jams</h3>
                 <br>
                 <p>Dec 1, 2021</p><br>
                 <p>Speaker: Trinankur Atarthi</p><br>
@@ -128,7 +128,7 @@
     <div class="container-ev left-ev">
       <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-lets-kickstart-the-gdsc-journey/">
           <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-              <h2>Let's KickStart the GDSC Journey</h2>
+              <h3 style="color: black;">Let's KickStart the GDSC Journey</h3>
               <br>
               <p>Nov 27, 2021</p><br>
               <p>Speakers:Shreya Roy,Gourab Deb & Srishti Majumder</p><br>
@@ -140,7 +140,7 @@
   <div class="container-ev right-ev">
       <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-hands-on-workshop-on-game-development/">
           <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-            <h2>Hands-on Workshop on GAME DEVELOPMENT</h2>
+            <h3 style="color: black;">Hands-on Workshop on GAME DEVELOPMENT</h3>
             <br>
             <p>Oct 28 - 29, 2021</p><br>
             <p>Where We Got To Know About:<br>
@@ -156,7 +156,7 @@
   <div class="container-ev left-ev">
       <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-reality-check-with-arvr/">
           <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-              <h2>Reality Check with AR/VR</h2>
+              <h3 style="color: black;">Reality Check with AR/VR</h3>
               <br>
               <p>Oct 23, 2021</p><br>
               <p>Speaker:Samarth Singh</p><br>
@@ -168,7 +168,7 @@
   <div class="container-ev right-ev">
       <a target="blank" href="https://youtu.be/AEU_VVKYXzA">
           <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-              <h2>Hacktoberfest and Github</h2>
+              <h3 style="color: black;">Hacktoberfest and Github</h3>
               <br>
               <p>Sep 25, 2021</p><br>
               <p>Where Our Speakers Explained About Hacktoberfest And Github With Live Demo.
@@ -179,7 +179,7 @@
   <div class="container-ev left-ev">
     <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-reality-check-with-arvr/">
         <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-            <h2>Reality Check with AR/VR</h2>
+            <h3 style="color: black;">Reality Check with AR/VR</h3>
             <br>
             <p>Oct 23, 2021</p><br>
             <p>Speaker:Samarth Singh</p><br>
@@ -191,7 +191,7 @@
 <div class="container-ev right-ev">
     <a target="blank" href="https://youtu.be/AEU_VVKYXzA">
         <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-            <h2>Hacktoberfest and Github</h2>
+            <h3 style="color: black;">Hacktoberfest and Github</h3>
             <br>
             <p>Sep 25, 2021</p><br>
             <p>Where Our Speakers Explained About Hacktoberfest And Github With Live Demo.
@@ -202,7 +202,7 @@
 <div class="container-ev left-ev">
   <a target="blank" href="https://youtu.be/0CQ3ybwG2q8">
       <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-          <h2>Info Session about 30 days of Google Cloud</h2>
+          <h3 style="color: black;">Info Session about 30 days of Google Cloud</h3>
           <br>
           <p>Sep 19, 2021</p><br>
           <p>Speakers:Shreya Roy & Srishti Majumder</p><br>
@@ -214,7 +214,7 @@
 <div class="container-ev right-ev">
   <a target="blank" href="https://youtu.be/HxyxX-emMfk">
       <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-          <h2>A Two Days Workshop on Getting Started With Open Source</h2>
+          <h3 style="color: black;">A Two Days Workshop on Getting Started With Open Source</h3>
           <br>
           <p>Sep 4 - 5</p><br>
           <p>Speakers:Aniwesh Tiwari & Vikash Kumar</p><br>
