--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="card-body">
             <h5 class="card-title">Community Partner 🤠</h5>
             <p class="card-text">Impressed with our work? Become our Community Partner! Drop us an Email</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="mailto:gdscsit2021@gmail.com" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
