removed unrequired margin in socials of contact page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -101,7 +101,7 @@
   </div>
 
   <div class="container-icons justify-content-centre">
-    <div class="row" style="justify-content: center;width: 100%; margin-bottom: 30px;">
+    <div class="row mx-0" style="justify-content: center;width: 100%; margin-bottom: 30px;">
       <div class=" contact-cards" style="width: 90px;">
         <a href="https://www.facebook.com/gdscsitsiliguri/?ref=page_internal"><i class="bi bi-facebook" style="color: #4267B2;"></i></a>
       </div>
